Intégration du template

--- a/frontend/src/assets/styles/_header.scss
+++ b/frontend/src/assets/styles/_header.scss
@@ -6,7 +6,7 @@
     z-index: 300;
     top: 0px;
     left: 220px;
-    background: linear-gradient(to bottom, $color-light, $color-light, $color-light,$color-light, $color-light,rgb(244, 244, 245, 0));
+  //  background: linear-gradient(to bottom, $color-light, $color-light, $color-light,$color-light, $color-light,rgb(244, 244, 245, 0));
     width: 100%;
     height: auto;
     display: flex;
